# Alcor

./: CMakeLists.txt  README.md  makefile
src/: attacks.h  bench.cpp  bench.h  bitboard.h  constants.h  fixed_vector.h  mcts.cpp  mcts.h  move.h  nnue.cpp  nnue.h  perft.cpp  perft.h  position.h  see.cpp  see.h  types.h  uci.cpp  uci.h  useful.h  zobrist.h
